# Video-Brief-Generator

./: .gitignore  Documentation.md  Possible_improvements.txt  README.md  Todo.txt  pyproject.toml  requirements.txt  timmar.txt
config/: config.yaml
src/: CompareFeatures.py  GoogleCloud.py  GoogleVideoAnalyzer.py  LastfmAPI.py  OpenAITrend.py  SimilarSongs.py  TikAPI.py  ViralMusicFinder.py  __init__.py  main.py  music_finder.py  spotify.py
tests/: TestBriefApi.py  openai_Test.py
web/: hej.py  web.py
