[project]
name = "brief-generator"
version = "0.1.0"
description = "A tool for generating briefs for videos to music"
authors = [
    {name = "Armon Haghighi"},
    {name = "Victor Pekkari", email = "victor.pekkari@gmail.com"}
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "google-cloud-storage>=2.7.0",
    "google-auth>=2.16.0",
    "google-cloud-videointelligence>=2.11.0",
    "spotipy>=2.22.1",
    "pylast>=5.1.0",
    "tiktokapipy>=0.2.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"