[project]
name = "brief-generator"
version = "0.1.0"
description = "A tool for generating briefs for videos to music"
authors = [
    {name = "Armon Haghighi"},
    {name = "Victor Pekkari", email = "victor.pekkari@gmail.com"}
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "Flask==3.1.0",
    "openai==1.66.3",
    "protobuf==6.30.0",
    "pylast==5.5.0",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "Requests==2.32.3",
    "tikapi==3.2.0",
    "google-cloud-storage>=2.7.0",
    "google-cloud-videointelligence>=2.11.0",
    "google-auth>=2.16.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage"
]

[tool.setuptools]
packages = ["src"]